--- a/config.yml
+++ b/config.yml
@@ -29,7 +29,7 @@ content:
       sites:
         - name: Dribbble
           description: 全球UI设计师作品分享平台。
-          url: https://dribbble.com/
+          url: https://14669944.com/
         - name: Behance
           description: Adobe旗下的设计师交流平台，来自世界各地的设计师在这里分享自己的作品。
           url: https://behance.net/
