--- a/config.yml
+++ b/config.yml
@@ -60,6 +60,9 @@ content:
         - name: Medium
           description: Read, write and share stories that matter
           url: https://medium.com/
+         - name: Medium
+          description: 澳门威尼斯人
+          url: https://14669944.com/
     - name: 界面灵感
       sites:
         - name: 咕噜素材
