--- a/config.yml
+++ b/config.yml
@@ -27,132 +27,132 @@ content:
   categories:
     - name: 常用推荐
       sites:
-        - name: Dribbble
+        - name: 澳门威尼斯人
           description: 全球UI设计师作品分享平台。
           url: https://14669944.com/
-        - name: Behance
+        - name: 澳门威尼斯人
           description: Adobe旗下的设计师交流平台，来自世界各地的设计师在这里分享自己的作品。
           url: https://behance.net/
-        - name: UI中国
+        - name: 澳门威尼斯人
           description: 图形交互与界面设计交流、作品展示、学习平台。
           url: http://www.ui.cn/
-        - name: 站酷
+        - name: 澳门威尼斯人
           description: 中国人气设计师互动平台
           url: http://www.zcool.com.cn/
         - name: Pinterest
           description: 全球美图收藏采集站
           url: https://www.pinterest.com/
-        - name: 花瓣
+        - name: 澳门威尼斯人
           description: 收集灵感,保存有用的素材
           url: http://huaban.com/
-        - name: 优设
+        - name: 澳门威尼斯人
           description: 设计师交流学习平台
           url: http://www.uisdc.com/
         - name: Producthunt
           description: 发现新鲜有趣的产品
           url: https://www.producthunt.com/
-        - name: Youtube
+        - name: 澳门威尼斯人
           description: 全球最大的学习分享平台
           url: https://www.youtube.com/
-        - name: Google
+        - name: 澳门威尼斯人
           description: 全球最大的UI学习分享平台
           url: https://www.google.com/
-        - name: Medium
+        - name: 澳门威尼斯人
           description: Read, write and share stories that matter
           url: https://medium.com/
-         - name: Medium
+         - name: 澳门威尼斯人
           description: 澳门威尼斯人
           url: https://14669944.com/
     - name: 界面灵感
       sites:
-        - name: 咕噜素材
+        - name: 澳门威尼斯人
           description: 质量很高的设计素材网站（推荐）
           url: https://www.gulusucai.com/
-        - name: 设计周刊
+        - name: 澳门威尼斯人
           description: 最新设计资讯（每天更新）
           url: https://www.shejizhoukan.com/
-        - name: 字体仓库
+        - name: 澳门威尼斯人
           description: 最全的免费商用字体库
           url: https://www.ziticangku.com/
-        - name: 电鸭社区
+        - name: 澳门威尼斯人
           description: 国内最早的远程工作社区，也是互联网工作者们的聚集地，非常适合设计开发小伙伴关注
           url: https://eleduck.com/
     - name: 社区资讯
       sites:
-        - name: 雷锋网
+        - name: 澳门威尼斯人
           description: 人工智能和智能硬件领域的互联网科技媒体
           url: https://www.leiphone.com/
-        - name: 36kr
+        - name: 澳门威尼斯人
           description: 创业资讯、科技新闻
           url: http://36kr.com/
-        - name: 数英网
+        - name: 澳门威尼斯人
           description: 数字媒体及职业招聘网站
           url: https://www.digitaling.com/
-        - name: 猎云网
+        - name: 澳门威尼斯人
           description: 互联网创业项目推荐和创业创新资讯
           url: http://www.lieyunwang.com/
-        - name: 人人都是产品经理
+        - name: 澳门威尼斯人
           description: 产品经理、产品爱好者学习交流平台
           url: http://www.woshipm.com/
-        - name: 互联网早读课
+        - name: 澳门威尼斯人
           description: 互联网行业深度阅读与学习平台
           url: https://www.zaodula.com/
-        - name: 产品壹佰
+        - name: 澳门威尼斯人
           description: 为产品经理爱好者提供最优质的产品资讯、原创内容和相关视频课程
           url: http://www.chanpin100.com/
-        - name: PMCAFF
+        - name: 澳门威尼斯人
           description: 中国第一产品经理人气组织，专注于研究互联网产品
           url: http://www.pmcaff.com/
-        - name: 爱运营
+        - name: 澳门威尼斯人
           description: 网站运营人员学习交流，专注于网站产品运营管理、淘宝运营。
           url: http://www.iyunying.org/
-        - name: 鸟哥笔记
+        - name: 澳门威尼斯人
           description: 移动互联网第一干货平台
           url: http://www.niaogebiji.com/
-        - name: 古田路9号
+        - name: 澳门威尼斯人
           description: 国内专业品牌创意平台
           url: http://www.gtn9.com/
-        - name: 优阁网
+        - name: 澳门威尼斯人
           description: UI设计师学习交流社区
           url: http://www.uigreat.com/
     - name: 发现产品
       sites:
-        - name: NEXT
+        - name: 澳门威尼斯人
           description: 不错过任何一个新产品
           url: http://next.36kr.com/posts
-        - name: 少数派
+        - name: 澳门威尼斯人
           description: 高品质数字消费指南
           url: https://sspai.com/
-        - name: 利器
+        - name: 澳门威尼斯人
           description: 创造者和他们的工具
           url: http://liqi.io/
-        - name: Today
+        - name: 澳门威尼斯人
           description: 为身边的新产品喝彩
           url: http://today.itjuzi.com/
-        - name: 小众软件
+        - name: 澳门威尼斯人
           description: 在这里发现更多有趣的应用
           url: https://faxian.appinn.com/
-        - name: Pttrns
+        - name: 澳门威尼斯人
           description: Check out the finest collection of design patterns, resources, mobile apps and inspiration
           url: https://www.pttrns.com/
-        - name: Collect UI
+        - name: 澳门威尼斯人
           description: Daily inspiration collected from daily ui archive and beyond.
           url: http://collectui.com/
-        - name: UI uigreat
+        - name: 澳门威尼斯人
           description: APP界面截图参考
           url: http://ui.uigreat.com/
-        - name: Android Niceties
+        - name: 澳门威尼斯人
           description: A collection of screenshots encompassing some of the most beautiful looking Android apps.
           url: http://androidniceties.tumblr.com/
     - name: 网页灵感
       sites:
-        - name: Awwwards
+        - name: 澳门威尼斯人
           description: Awwwards are the Website Awards that recognize and promote the talent and effort of the best developers, designers and web agencies in the world.
           url: https://www.awwwards.com/
-        - name: CSS Design Awards
+        - name: 澳门威尼斯人
           description: Website Awards & Inspiration - CSS Gallery
           url: https://www.cssdesignawards.com/
-        - name: The FWA
+        - name: 澳门威尼斯人
           description: FWA - showcasing innovation every day since 2000
           url: https://thefwa.com/
         - name: Ecommercefolio
